# nns-dapp

./: .gitignore  build.sh  dfx.json
canisters/nns_ui/: Cargo.toml  nns_ui.did
canisters/nns_ui/src/: main.rs  transaction_store.rs
canisters/nns_ui/src/assets/: asset.rs  assets.did  batch.rs  chunk.rs  http_request.rs  mod.rs  timestamp.rs
dfinity_wallet/lib/: route_information_parser.dart
dfinity_wallet/lib/data/: neuron.dart
dfinity_wallet/lib/ic_api/: native_ic_api.dart  platform_ic_api.dart  stub_ic_api.dart
dfinity_wallet/neuronStakingIssue/: reattemptNeuronStakeNotification.js
frontend/dart/lib/: main.dart  resources_loading_page.dart  route_information_parser.dart
frontend/pure/: README.md  accounts-page.css  accounts-page.js  index.css  index.html  login-page.css  login-page.js  main-layout.css  main-layout.js  nav-button.js
frontend/svelte/: .env.development  .env.production  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/svelte-001/: package-lock.json  package.json
frontend/svelte-001/src/: AccountsPage.svelte  App.svelte  CanistersPage.svelte  LoginPage.svelte  NeuronsPage.svelte  (+1 more)
frontend/svelte-app/: TODO  dfx.json  package-lock.json  package.json  tsconfig.json
frontend/svelte-old/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/ts/: babel.config.js  build.sh  package-lock.json  package.json
js-agent/: build.sh  index.ts  package-lock.json  reattemptNeuronStakeNotification.ts
js-agent/src/: AuthApi.ts  ServiceApi.ts  tests.ts
scripts/: docker-build
(+80 files in other folders)
